# WhisperCore_Android

./: NEW_README.md
app/: build.gradle.kts
whispercore/: build.gradle.kts
whispercore/src/main/cpp/: CMakeLists.txt  jni.c
